[package]
name = "socksx"
version = "0.1.0"
description = "A SOCKS toolkit for Rust"
authors = ["Onno Valkering"]
edition = "2018"
license = "MIT"

[dependencies]
anyhow = "1"
bytes = "1"
libc = "0.2"
log = "0.4"
nix = "0.20"
num-derive = "0.3"
num-traits = "0.2"
thiserror = "1"
tokio = { version = "^1.5", features = ["full"] }
url = "2.2"

[dev-dependencies]
clap = "2"
