[package]
name = "socksx-py"
version = "0.1.0"
description = "A SOCKS toolkit for Python"
authors = ["Onno Valkering"]
edition = "2018"
license = "MIT"

[lib]
name = "socksx"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.13", features = ["extension-module"] }
pyo3-asyncio = { version = "0.13", features = ["attributes", "tokio-runtime"] }
socksx = { path = "../socksx" }
tokio = { version = "1", features = ["full"] }