[package]
name = "socksx-py"
version = "0.1.1"
description = "A SOCKS toolkit for Python"
authors = ["Onno Valkering"]
edition = "2018"
license = "MIT"

[lib]
name = "socksx"
crate-type = ["cdylib"]

[dependencies]
bytes = "1"
pin-project-lite = "0.2"
pyo3 = "0.13"
pyo3-asyncio = { version = "0.13", features = ["attributes", "tokio-runtime"] }
socksx = { path = "../socksx" }
tokio = { version = "1", features = ["full"] }

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]

[package.metadata.maturin]
name = "socksx"